--- a/Heart_Disease_Detection.ipynb
+++ b/Heart_Disease_Detection.ipynb
@@ -4386,9 +4386,7 @@
         "from sklearn.metrics import roc_auc_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "# Re-create the X_test and y_test for integer-encoded models\n",
-        "# (Logistic Regression, Decision Tree, Random Forest)\n",
-        "# This uses the 'heart_df' which was integer-encoded\n",
+        "\n",
         "X_train_int_encoded, X_test_int_encoded, y_train_int_encoded, y_test_int_encoded = train_test_split(\n",
         "    heart_df.drop('HeartDisease',axis=1),\n",
         "    heart_df['HeartDisease'],\n",
@@ -4397,25 +4395,23 @@
         "    stratify=heart_df['HeartDisease']\n",
         ")\n",
         "\n",
-        "# --- 1️⃣ Logistic Regression ---\n",
+        "# Logistic Regression\n",
         "lr_prob = lr.predict_proba(X_test_int_encoded)[:, 1]   # Probabilities\n",
         "auc_lr = roc_auc_score(y_test_int_encoded, lr_prob)\n",
         "\n",
-        "# --- 2️⃣ Decision Tree ---\n",
+        "# Decision Tree\n",
         "dt_prob = Ctree.predict_proba(X_test_int_encoded)[:, 1]\n",
         "auc_dt = roc_auc_score(y_test_int_encoded, dt_prob)\n",
         "\n",
-        "# --- 3️⃣ Random Forest ---\n",
+        "# Random Forest\n",
         "rf_prob = rfctree.predict_proba(X_test_int_encoded)[:, 1]\n",
         "auc_rf = roc_auc_score(y_test_int_encoded, rf_prob)\n",
         "\n",
-        "# --- 4️⃣ MLP ---\n",
-        "# For MLP, use the X_test which was preprocessed for it (one-hot encoded, not scaled)\n",
+        "# MLP\n",
         "mlp_prob = mlp_model.predict(X_test)        # Probabilities from Keras model\n",
         "auc_mlp = roc_auc_score(y_test, mlp_prob)\n",
         "\n",
-        "# --- 5️⃣ 1D CNN ---\n",
-        "# For 1D CNN, use the X_test_reshaped which was preprocessed for it\n",
+        "# 1D CNN\n",
         "cnn_prob = cnn_model.predict(X_test_reshaped)\n",
         "auc_cnn = roc_auc_score(y_test, cnn_prob)\n",
         "\n",
@@ -4538,7 +4534,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtOTxj3X9ADtarPKcG4HaQ",
+      "authorship_tag": "ABX9TyOBUFwFxxzyOnYJKLkE5kv5",
       "include_colab_link": true
     },
     "kernelspec": {
